Fix spacing issue

--- a/choheron.github.io/src/css/homepage.css
+++ b/choheron.github.io/src/css/homepage.css
@@ -68,7 +68,7 @@ body {
 }
 
 .landing {
-	margin-top: 5vh;
+	margin-top: 1%;
 	min-height: 25%;
   width: 90vw;
   display: flex;
